Adciona comportamento de teclas.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
             }
         }
 
+        function porTeclasDirecionais(teclas) {
+            return function () {
+                if(teclas.esquerda) {this.vx = -120;}
+                if(teclas.direita) {this.vx = +120;}
+                if(teclas.esquerda === teclas.direita) {this.vx = 0;}
+
+                if(teclas.cima) {this.vy = -120;}
+                if(teclas.baixo) {this.vy = +120;}
+                if(teclas.cima === teclas.baixo) {this.vy = 0;}
+            }
+        }
+
+
         function passo(t) {
             dt = (t - anterior) / 1000;
             cena1.passo(dt);
