--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         var cena1 = new Scene({ ctx: ctx, w: canvas.width, h: canvas.height });
         var pc = new Sprite({comportar: porTeclasDirecionais(teclas)});
         cena1.adicionar(pc);
-        cena1.adicionar(new Sprite({ x: 160, y: 150, w: 15, color: "red", comportar: persegue(pc) }));
-        cena1.adicionar(new Sprite({ x: 60, y: 250, h: 20, color: "yellow", comportar: persegue(pc) }));
+        cena1.adicionar(new Sprite({ x: 160, y: 150, w: 15, va: -16 ,color: "red", comportar: persegue(pc) }));
+        cena1.adicionar(new Sprite({ x: 60, y: 250, h: 20,va: 15, color: "yellow", comportar: persegue(pc) }));
         
         function persegue(alvo) {
             return function () {
@@ -39,13 +39,13 @@
 
         function porTeclasDirecionais(teclas) {
             return function () {
-                if(teclas.esquerda) {this.vx = -120;}
-                if(teclas.direita) {this.vx = +120;}
-                if(teclas.esquerda === teclas.direita) {this.vx = 0;}
+                if(teclas.esquerda) {this.va = -2;}
+                if(teclas.direita) {this.va = +2;}
+                if(teclas.esquerda === teclas.direita) {this.va = 0;}
 
-                if(teclas.cima) {this.vy = -120;}
-                if(teclas.baixo) {this.vy = +120;}
-                if(teclas.cima === teclas.baixo) {this.vy = 0;}
+                if(teclas.cima) {this.vm = +120;}
+                if(teclas.baixo) {this.vm = -120;}
+                if(teclas.cima === teclas.baixo) {this.vm = 0;}
             }
         }
 
