--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Semana 04</title>
+    <title>Semana 04 Deo</title>
     <script src="Sprite.js"></script>
     <script src="Scene.js"></script>
 </head>
@@ -26,17 +26,13 @@
         }
 
         var cena1 = new Scene({ ctx: ctx, w: canvas.width, h: canvas.height });
-        var pc = new Sprite({ comportar: porTeclasDirecionais(teclas), props: { tipo: "pc" } });
+        var pc = new Sprite({ x:150, y:150, comportar: porTeclasDirecionais(teclas), props: { tipo: "pc" } });
         cena1.adicionar(pc);
         cena1.adicionar(new Sprite({
-            x: 160, y: 150, w: 15, va: -6, vm: 300, color: "red",
-            comportar: persegue2(pc), props: { tipo: "npc" , Spawn:0 }
+            x: 460, y: 150, w: 15, va: 2, vm: 30, color: "red",
+            comportar: persegue2(pc), props: { tipo: "npc" , spawn:0 }
         }));
-        cena1.adicionar(new Sprite({
-            x: 60, y: 250, h: 20, va: 4, vm: -80, color: "yellow",
-            comportar: persegue2(pc), props: { tipo: "npc" }
-        }));
-
+        
         for (var k = 0; k < 10; k++) {
             cena1.adicionar(new Sprite({
                 x: 300 * Math.random(),
@@ -59,13 +55,13 @@
             return function () {
                 var dx = alvo.x - this.x;
                 var dy = alvo.y - this.y;
-                var adj = 1.5;
                 var da = Math.sqrt(dx * dx + dy * dy);
+                var adj = 1.5;
                 var prod = (dx / da) * Math.cos(this.a + adj) +
                     (dy / da) * Math.sin(this.a + adj)
 
                 this.va = 2 * (prod - 0);
-                this.vm = 30;
+                //this.vm = 30;
             }
         }
 
@@ -107,10 +103,10 @@
                 if (teclas.espaco && this.cooldown <= 0) {
                     var tiro = new Sprite({
                         x: this.x, y: this.y, a: this.a - 0.1 + 0.2 * Math.random(),
-                        vm: 240, color: "green", w: 4, h: 4
+                        vm: 240, color: "green", w: 4, h: 4, props: { tipo: "tiro" }
                     });
                     this.Scene.adicionar(tiro);
-                    this.cooldown = 0.2;
+                    this.cooldown = 0.5;
                 }
             }
         }
@@ -120,6 +116,7 @@
             dt = (t - anterior) / 1000;
             cena1.passo(dt);
             anterior = t;
+            ctx.fillText(1 / dt, 10, 20);
             requestAnimationFrame(passo);
         }
         var dt, anterior = 0;
